# esp32_sparkplug

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  THIRD_PARTY_NOTICES.md  partitions.csv  sdkconfig.defaults
.github/workflows/: build.yml
components/app_config/: CMakeLists.txt  app_config.c
components/app_config/include/: app_config.h
components/app_console/: CMakeLists.txt  app_console.c
components/app_console/include/: app_console.h
components/sensor_tmp36/: CMakeLists.txt  sensor_tmp36.c
components/sensor_tmp36/include/: sensor_tmp36.h
components/sparkplug_node/: CMakeLists.txt  idf_component.yml  sparkplug_decode.c  sparkplug_node.c  sparkplug_node_internal.h  sparkplug_payloads.c  sparkplug_session.c
components/sparkplug_node/certs/: ca-chain.cert.pem
components/sparkplug_node/include/: sparkplug_node.h  sparkplug_session.h
components/time_sync/: CMakeLists.txt  time_sync.c
components/time_sync/include/: time_sync.h
components/wifi_manager/: CMakeLists.txt  wifi_manager.c
components/wifi_manager/include/: wifi_manager.h
main/: CMakeLists.txt  app_main.c
scripts/: bootstrap.sh  build.sh  common.sh  flash.sh  monitor.sh
